@@ -23,3 +23,10 @@ dependencies {
 
     testRuntimeOnly mn.snakeyaml
 }
+
+tasks.withType(Test).configureEach {
+    if (javaVersion.isCompatibleWith(JavaVersion.VERSION_17)) {
+        // See https://kotest.io/docs/next/extensions/system_extensions.html#system-environment.
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+    }
+}
